Fixed Deprecated APIs Warnings, particularly old style collections by Java Generics and a few built-in datatype initialization